--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -70,6 +70,7 @@
                             >
 
                             <ImageView
+                                android:id="@+id/img_back"
                                 android:layout_width="38dp"
                                 android:layout_height="38dp"
                                 android:layout_alignParentStart="true"
@@ -94,6 +95,7 @@
                                 android:layout_gravity="bottom|left"
                                 android:contentDescription="@string/image"
                                 android:src="@drawable/ic_cart_user_detail"
+                                android:id="@+id/img_cart"
                                 tools:ignore="RtlHardcoded" />
                                 <TextView
                                     android:layout_gravity="right|top"
@@ -255,12 +257,13 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="44dp"
-                        android:paddingStart="10dp"
                         android:textSize="16dp"
                         android:background="@drawable/bg_edit_user_detail"
                         android:layout_marginBottom="15dp"
                         app:endIconDrawable="@drawable/ic_drop"
                         app:boxStrokeColor="#9D9EA3"
+                        app:hintTextColor="#000000"
+                        android:alpha="1"
                         app:endIconTint="#8F5F43"
                         app:boxStrokeWidthFocused="0dp"
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">
@@ -270,7 +273,7 @@
                             android:layout_height="match_parent"
                             android:gravity="center_vertical"
                             android:paddingTop="2dp"
-                            android:text="@{viewModel.currentUser.genderString}"
+                            android:hint="@{viewModel.currentUser.genderString}"
                             android:inputType="none"
                             android:backgroundTint="#00000000"
                             android:textSize="16dp"/>
