--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".uicontroler.activity.CategoryActivity">
-    <fragment
-        android:name="androidx.navigation.fragment.NavHostFragment"
+
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentCategories"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph ="@navigation/navigation_categories"
+        app:navGraph="@navigation/navigation_categories"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
