--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -2,6 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.aposs_buyer.viewmodel.CategoryViewModel" />
+    </data>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -170,8 +175,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="200dp">
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rc_category"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    detailCategories="@{viewModel.lstCategory}"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_category"/>
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
