--- a/app/src/main/res/layout/item_kind.xml
+++ b/app/src/main/res/layout/item_kind.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="312dp"
-    android:background="@drawable/bg_kind_item">
+    android:background="@drawable/bg_kind_item"
+    android:layout_marginBottom="20dp">
     <LinearLayout
+        android:id="@+id/ln_top_left"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:gravity="center"
@@ -22,6 +23,7 @@
             android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/ln_bottom_right"
         android:layout_width="wrap_content"
         android:layout_height="57dp"
         android:gravity="right"
@@ -82,11 +84,22 @@
             android:secondaryProgressTint="@color/yellow"
             android:stepSize="0.5" />
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_centerInParent="true"
-        />
+        android:layout_centerHorizontal="true"
+        android:background="@color/light_green"
+        android:layout_below="@+id/ln_top_left"
+        android:layout_above="@+id/ln_bottom_right">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/light_green"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_product" />
+    </LinearLayout>
 </RelativeLayout>
 </layout>
