--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -63,12 +63,14 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:orientation="horizontal">
+
                         <ImageView
+                            android:id="@+id/img_back"
                             android:layout_width="25dp"
-                            android:layout_marginTop="10dp"
                             android:layout_height="25dp"
                             android:layout_alignParentStart="true"
-                            android:src="@drawable/ic_back_categories"/>
+                            android:layout_marginTop="10dp"
+                            android:src="@drawable/ic_back_categories" />
 
                         <TextView
                             android:id="@+id/title"
