--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/tv_showAllCategory"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/show_all"
