--- a/app/src/main/res/navigation/navigation_categories.xml
+++ b/app/src/main/res/navigation/navigation_categories.xml
@@ -22,5 +22,25 @@
             android:name="category_id"
             app:argType="long"
             android:defaultValue="-1L" />
+        <argument
+            android:name="category_name"
+            app:argType="string"
+            android:defaultValue="" />
+        <action
+            android:id="@+id/action_kindFragment_to_productOfKindFragment"
+            app:destination="@id/productOfKindFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productOfKindFragment"
+        android:name="com.example.aposs_buyer.uicontroler.fragment.ProductOfKindFragment"
+        android:label="fragment_product_of_kind"
+        tools:layout="@layout/fragment_product_of_kind" >
+        <argument
+            android:name="kind_id"
+            app:argType="long"
+            android:defaultValue="-1L" />
+        <argument
+            android:name="kind_name"
+            app:argType="string" />
     </fragment>
 </navigation>
